--- a/WebScrapping/DataScrapping.json
+++ b/WebScrapping/DataScrapping.json
@@ -1,282 +1,282 @@
 [
     {
         "No": 1,
-        "judul": "Jasa Raharja Imbau Pemudik Patuhi Aturan Lalin One Way ",
+        "judul": "Arus Lalu Lintas Jalan Tol Jakarta-Cikampek Tersendat Jelang Rest Area ",
         "kategori": "Kabar Ramadhan",
-        "waktu_publish": "Ahad , 14 Apr 2024, 17:47 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 20:22 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 2,
-        "judul": "Puncak Arus Balik 2024 di Bandara Diprediksi Berlangsung Besok                         ",
+        "judul": "Arus Balik Masih Lancar, Polri Belum Berlakukan Sistem Tunda di Bakauheni                        ",
         "kategori": "Kabar Ramadhan",
-        "waktu_publish": "Ahad , 14 Apr 2024, 17:19 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 20:01 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 3,
-        "judul": "Rekayasa Lalin Contraflow Kembali Diterapkan di Tol Jakarta-Cikampek                        ",
+        "judul": "Menhub Sebut Penyeberangan Sumatra-Jawa Ditambah Jadi 146 Trip                        ",
         "kategori": "Kabar Ramadhan",
-        "waktu_publish": "Ahad , 14 Apr 2024, 16:27 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 19:50 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 4,
-        "judul": "TransJakarta Beroperasi Sejak Dini Hari di Terminal Pulogebang                        ",
+        "judul": "Lalin Arus Balik di Tol MBZ 134 Persen Lebih Tinggi Dibandingkan Normal                        ",
         "kategori": "Kabar Ramadhan",
-        "waktu_publish": "Ahad , 14 Apr 2024, 14:27 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 19:42 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 5,
-        "judul": "Puncak Arus Balik di Terminal Pulogebang Diperkirakan 17 April                        ",
+        "judul": "Jasa Raharja Imbau Pemudik Patuhi Aturan Lalin One Way ",
         "kategori": "Kabar Ramadhan",
-        "waktu_publish": "Ahad , 14 Apr 2024, 13:23 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 17:47 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 8,
         "judul": "MK: Rapat Permusyawaratan Hakim Formal untuk PHPU Pilpres Mulai 16 April                        ",
         "kategori": "Kabar Pemilu",
-        "waktu_publish": "Kamis , 11 Apr 2024, 14:14 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "11 Apr 2024, 14:14 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 9,
         "judul": "Dasco Akui Prabowo-Gibran Bangun Komunikasi dengan Megawati Soekarnoputri                        ",
         "kategori": "Prabowo Gibran",
-        "waktu_publish": "Rabu , 10 Apr 2024, 19:19 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "10 Apr 2024, 19:19 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 10,
         "judul": "Anies Mengaku Menerima Banyak Masukan untuk Istiqomah di Jalan Perubahan                        ",
         "kategori": "Anies Muhaimin",
-        "waktu_publish": "Rabu , 10 Apr 2024, 18:55 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "10 Apr 2024, 18:55 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 11,
         "judul": "Gibran Halal Bihalal ke Kediaman Prabowo di Jakarta                        ",
         "kategori": "Prabowo Gibran",
-        "waktu_publish": "Rabu , 10 Apr 2024, 18:28 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "10 Apr 2024, 18:28 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 12,
         "judul": "Prabowo Buka Pintu Rumahnya untuk Halal Bihalal Jajaran Pejabat                        ",
         "kategori": "Prabowo Gibran",
-        "waktu_publish": "Rabu , 10 Apr 2024, 18:09 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "10 Apr 2024, 18:09 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 14,
-        "judul": "Kelompok tak Beragama Terus Berkembang di AS",
+        "judul": "Puluhan Ribu Kendaraan Telah Kembali ke Jakarta",
         "kategori": "Close Up",
-        "waktu_publish": "Ahad , 14 Apr 2024, 12:11 WIB",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 21:05 WIB",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 15,
-        "judul": "'Kopi Adalah Media'",
-        "kategori": "Stokshot",
-        "waktu_publish": "Ahad , 14 Apr 2024, 00:06 WIB",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "judul": "Pasar Beringharjo, Surganya Belanja Batik di Yogyakarta",
+        "kategori": "Info37",
+        "waktu_publish": "14 Apr 2024, 21:00 WIB",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 16,
-        "judul": "Ancol, Masih Favorit Wisatawan di Libur Lebaran",
+        "judul": "Mudahnya Check In Mandiri di Bandara Dengan Teknologi Pengenalan Wajah",
         "kategori": "Close Up",
-        "waktu_publish": "Sabtu , 13 Apr 2024, 20:49 WIB",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 20:18 WIB",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 17,
-        "judul": "Satu dari Tiga Warga AS Mengaku tidak Beragama",
-        "kategori": "Close Up",
-        "waktu_publish": "Sabtu , 13 Apr 2024, 19:14 WIB",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "judul": "Seru Juga, Terjun Payung Saat Gerhana Matahari",
+        "kategori": "Info37",
+        "waktu_publish": "14 Apr 2024, 20:18 WIB",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 18,
-        "judul": "Keutamaan Dzikir Tauhid, ini Rahasianya",
-        "kategori": "Info37",
-        "waktu_publish": "Sabtu , 13 Apr 2024, 18:48 WIB",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "judul": "Kelompok tak Beragama Terus Berkembang di AS",
+        "kategori": "Close Up",
+        "waktu_publish": "14 Apr 2024, 12:11 WIB",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 20,
         "judul": "Iran Serang Tel Aviv, John Cusack: Israel Bukan Korban, Beginilah Proses Tabur-Tuai                        ",
         "kategori": "Happening",
-        "waktu_publish": "Ahad , 14 Apr 2024, 19:29 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 19:29 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 21,
         "judul": "Masih Libur? Museum dan Cagar Budaya Ini Cocok untuk Disambangi Bersama Keluarga                        ",
         "kategori": "Happening",
-        "waktu_publish": "Ahad , 14 Apr 2024, 18:54 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 18:54 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 22,
         "judul": "Makanan di Acara Halalbihalal Enak-Enak, Bagaimana Cara Jaga Badan Supaya Tetap Sehat?                        ",
         "kategori": "Health",
-        "waktu_publish": "Ahad , 14 Apr 2024, 18:45 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 18:45 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 23,
         "judul": "John Cena: Perseteruan Vin Diesel-Dwayne Johnson Terjadi karena Sesama Pria Alfa                        ",
         "kategori": "Happening",
-        "waktu_publish": "Ahad , 14 Apr 2024, 18:09 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 18:09 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 24,
         "judul": "'Avatar: The Last Airbender' Terancam Diboikot Akibat Komen Eric Nam Soal Palestina-Israel                        ",
         "kategori": "Happening",
-        "waktu_publish": "Ahad , 14 Apr 2024, 17:55 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 17:55 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 28,
         "judul": "Jumlah Gas Berbahaya di Atmosfer Terus Meningkat Selama Beberapa Dekade                        ",
         "kategori": "Lingkungan",
-        "waktu_publish": "Ahad , 14 Apr 2024, 09:29 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 09:29 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 29,
         "judul": "BRGM Dorong Pembentukan Peraturan Hukum Desa untuk Lindungi Gambut                        ",
         "kategori": "Tata Kelola",
-        "waktu_publish": "Ahad , 14 Apr 2024, 03:10 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 03:10 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 30,
         "judul": "KLHK Ingin SDM Lembaga Konservasi Punya Pengetahuan Memadai                        ",
         "kategori": "Tata Kelola",
-        "waktu_publish": "Sabtu , 13 Apr 2024, 14:30 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "13 Apr 2024, 14:30 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 31,
         "judul": "Kementerian PPN : Pemanfaatan Teknologi Dapat Atasi Sampah                        ",
         "kategori": "Tata Kelola",
-        "waktu_publish": "Sabtu , 13 Apr 2024, 14:15 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "13 Apr 2024, 14:15 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 32,
         "judul": "Menteri LHK: Lembaga Konservasi Berperan Penting Kelolaan Tumbuhan dan Satwa Liar                        ",
         "kategori": "Tata Kelola",
-        "waktu_publish": "Sabtu , 13 Apr 2024, 13:45 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "13 Apr 2024, 13:45 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 37,
-        "judul": "Dampak Iran Serang Israel, Pertamina Siap Jaga Ketahanan Energi Nasional                        ",
+        "judul": "Puncak Arus Balik, Garuda Terbangkan 80 Ribu Penumpang                        ",
         "kategori": "Bisnis",
-        "waktu_publish": "Ahad , 14 Apr 2024, 19:03 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 19:59 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 38,
-        "judul": "Sederhana Tapi Penting, Perlengkapan Ini Harus Ada di Mobil Sebelum Tempuh Arus Balik                        ",
-        "kategori": "Otomotif",
-        "waktu_publish": "Ahad , 14 Apr 2024, 17:48 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "judul": "Iran Serang Israel, Ini Potensi Dampaknya untuk Ekonomi Global                        ",
+        "kategori": "Finansial",
+        "waktu_publish": "14 Apr 2024, 19:52 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 39,
-        "judul": "KCIC Prediksi Terjadi Lonjakan Penumpang Kereta Cepat Hari Ini                        ",
+        "judul": "Dampak Iran Serang Israel, Pertamina Siap Jaga Ketahanan Energi Nasional                        ",
         "kategori": "Bisnis",
-        "waktu_publish": "Ahad , 14 Apr 2024, 17:38 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 19:03 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 40,
-        "judul": "Pertamina Pantau Dampak Harga Minyak Dunia Pascaserangan Iran ke Israel                        ",
-        "kategori": "Finansial",
-        "waktu_publish": "Ahad , 14 Apr 2024, 14:06 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "judul": "Sederhana Tapi Penting, Perlengkapan Ini Harus Ada di Mobil Sebelum Tempuh Arus Balik                        ",
+        "kategori": "Otomotif",
+        "waktu_publish": "14 Apr 2024, 17:48 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 41,
-        "judul": "Demi Modernisasi Alsintan, Kementan Gencarkan Program Gelisah                        ",
-        "kategori": "Pertanian",
-        "waktu_publish": "Ahad , 14 Apr 2024, 13:34 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "judul": "KCIC Prediksi Terjadi Lonjakan Penumpang Kereta Cepat Hari Ini                        ",
+        "kategori": "Bisnis",
+        "waktu_publish": "14 Apr 2024, 17:38 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 49,
         "judul": "Catat, Ini Cara Menghitung Zakat Mal                        ",
         "kategori": "Keuangan Sharia",
-        "waktu_publish": "Ahad , 14 Apr 2024, 08:05 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 08:05 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 50,
         "judul": "Pengusaha Produk Spa di Bali Butuh SDM Bantu Wajib Sertifikasi Halal                        ",
         "kategori": "Industri Halal Sharia",
-        "waktu_publish": "Ahad , 14 Apr 2024, 06:09 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 06:09 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 51,
         "judul": "Menperin: Potensi Besar Industri Halal Harus Kita Ambil                        ",
         "kategori": "Industri Halal Sharia",
-        "waktu_publish": "Ahad , 14 Apr 2024, 02:20 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 02:20 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 52,
         "judul": "Museum Batik Jadi Pilihan Wisata Selama Libur Lebaran di Jakarta                        ",
         "kategori": "Wisata Sharia",
-        "waktu_publish": "Sabtu , 13 Apr 2024, 08:13 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "13 Apr 2024, 08:13 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 53,
         "judul": "Lebaran Topat 2024 di Lombok Barat Dipusatkan di Pantai Tanjung Bias                        ",
         "kategori": "Wisata Sharia",
-        "waktu_publish": "Jumat , 12 Apr 2024, 15:00 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "12 Apr 2024, 15:00 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 61,
-        "judul": "Libur Lebaran, Pasien Puskesmas Tanah Abang Capai Ribuan Orang                        ",
+        "judul": "Museum Tsunami Aceh Dikunjungi 5.606 Wisatawan dalam Sehari                        ",
         "kategori": "Nusantara",
-        "waktu_publish": "Ahad , 14 Apr 2024, 19:02 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "waktu_publish": "14 Apr 2024, 20:26 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 62,
-        "judul": "Pomal dan Brimob Bentrok di Sorong, Begini Tanggapan Kapuspen TNI                        ",
-        "kategori": "Nusantara",
-        "waktu_publish": "Ahad , 14 Apr 2024, 18:51 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "judul": "14 Orang Meninggal Dunia Tertimbun Tanah Longsor di Tana Toraja                        ",
+        "kategori": "Sulawesi",
+        "waktu_publish": "14 Apr 2024, 19:38 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 63,
-        "judul": "Mengapa Ada Bullying?                        ",
-        "kategori": "Pendidikan",
-        "waktu_publish": "Ahad , 14 Apr 2024, 18:42 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "judul": "Libur Lebaran, Pasien Puskesmas Tanah Abang Capai Ribuan Orang                        ",
+        "kategori": "Nusantara",
+        "waktu_publish": "14 Apr 2024, 19:02 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 64,
-        "judul": "Ketua Fraksi PKS DPR Dukung Menlu Retno Tolak Normalisasi Hubungan dengan Israel                        ",
-        "kategori": "Umum",
-        "waktu_publish": "Ahad , 14 Apr 2024, 18:25 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "judul": "Pomal dan Brimob Bentrok di Sorong, Begini Tanggapan Kapuspen TNI                        ",
+        "kategori": "Nusantara",
+        "waktu_publish": "14 Apr 2024, 18:51 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     },
     {
         "No": 65,
-        "judul": "Begini Kronologi Baku Hantam Brimob Versus TNI AL di Pelabuhan Sorong                        ",
-        "kategori": "Nusantara",
-        "waktu_publish": "Ahad , 14 Apr 2024, 17:52 WIB                        ",
-        "waktu_pengambilan": "14-04-2024 19:33:33"
+        "judul": "Mengapa Ada Bullying?                        ",
+        "kategori": "Pendidikan",
+        "waktu_publish": "14 Apr 2024, 18:42 WIB                        ",
+        "waktu_pengambilan": "14 April 2024 21:14:39"
     }
 ]
